package survival2d.lobby.network;

public class LobbyCommand {

  public static final String GET_USER_INFO = "getUserInfo";
  public static final String CREATE_TEAM = "createTeam";
  public static final String JOIN_TEAM = "joinTeam";
  public static final String NEW_USER_JOIN_TEAM = "newUserJoinTeam";
  public static final String FIND_MATCH = "findMatch";
  public static final String GET_CONFIG = "getConfig";
}
