@startuml

title __NETWORK's Class Diagram__\n

  namespace survival2d {
    namespace lobby.network {
      class survival2d.lobby.network.LobbyCommand {
          {static} + CREATE_TEAM : String
          {static} + FIND_MATCH : String
          {static} + GET_CONFIG : String
          {static} + GET_USER_INFO : String
          {static} + JOIN_TEAM : String
          {static} + NEW_USER_JOIN_TEAM : String
          {static} + PING : String
      }
    }
  }
  

  namespace survival2d {
    namespace lobby.network {
      class survival2d.lobby.network.LobbyRequestController {
          {static} - log : Logger
          - responseFactory : EzyResponseFactory
          + createTeam()
          + findMatch()
          + getUserInfo()
          + handleGetConfig()
          + joinTeam()
      }
    }
  }
  

  survival2d.lobby.network.LobbyRequestController -up-|> com.tvd12.ezyfox.util.EzyLoggable
  survival2d.lobby.network.LobbyRequestController o-- survival2d.service.FindMatchService : findMatchService
  survival2d.lobby.network.LobbyRequestController o-- survival2d.service.LobbyTeamService : lobbyTeamService
  survival2d.lobby.network.LobbyRequestController o-- survival2d.service.MatchingService : matchingService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
